--- a/transition.html
+++ b/transition.html
@@ -5,7 +5,93 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    body{
+    background-color: papayawhip;
+    }
+    div{
+        height: 800px;
+        width: 500px;
+        overflow: scroll;
+        color: peru;
+        box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+    }
+    div:hover{
+background-color: black;
+    }
+    img{
+        width: 100%;
+        height: 300px;
+    }
+    p::before{
+        content: '🙂';
+    }
+    h1::after{
+        content: '🥺';
+    }
+    h1:hover::after{
+        content: '🙂';
+    }
+    p:hover::before{
+        content: '🥺'; 
+    }
+</style>
 <body>
-    
+   <center>
+    <div>
+        <img src="https://cdn.pixabay.com/photo/2023/11/20/23/11/woman-8402067_640.jpg" alt="">
+        <h1>Goodbye</h1>
+        <p>You must think that I'm stupid
+            You must think that I'm a fool
+            You must think that I'm new to this
+            But I have seen this all before
+            I'm never gonna let you close to me
+            Even though you mean the most to me
+            'Cause every time I open up, it hurts
+            So, I'm never gonna get too close to you
+            Even when I mean the most to you
+            In case you go and leave me in the dirt
+            But every time you hurt me, the less that I cry
+            And every time you leave me, the quicker these tears dry
+            And every time you walk out, the less I love you
+            Baby, we don't stand a chance, it's sad, but it's true
+            I'm way too good at goodbyes
+            (I'm way too good at goodbyes)
+            I'm way too good at goodbyes
+            (I'm way too good at goodbyes)
+            I know you're thinking I'm heartless
+            I know you're thinking I'm cold
+            I'm just protecting my innocence
+            I'm just protecting my soul
+            I'm never gonna let you close to me
+            Even though you mean the most to me
+            'Cause every time I open up, it hurts
+            So, I'm never gonna get too close to you
+            Even when I mean the most to you
+            In case you go and leave me in the dirt
+            But every time you hurt me, the less that I cry
+            And every time you leave me, the quicker these tears dry
+            And every time you walk out, the less I love you
+            Baby, we don't stand a chance, it's sad, but it's true
+            I'm way too good at goodbyes
+            (I'm way too good at goodbyes)
+            I'm way too good at goodbyes
+            (I'm way too good at goodbyes)
+            No way that you'll see me cry
+            (No way that you'll see me cry)
+            I'm way too good at goodbyes
+            (I'm way too good at goodbyes) no
+            No, no, no, no, no (I'm way too good at goodbyes)
+            No, no, no, no
+            No, no, no (I'm way too good at goodbyes)
+            (No way that you'll see me cry)
+            Ah-ah-ah (I'm way too good at goodbyes)
+            'Cause every time you hurt me, the less that I cry
+            And every time you leave me, the quicker these tears dry
+            And every time you walk out, the less I love you
+            Baby, we don't stand a chance, it's sad, but it's true
+            I'm way too good at goodbyes</p>
+    </div>
+   </center>
 </body>
 </html>
