--- a/transition.html
+++ b/transition.html
@@ -35,6 +35,23 @@ background-color: black;
     p:hover::before{
         content: '🥺'; 
     }
+    button{
+        height: 50px;
+        width: 200px;
+        background-color: black;
+        color: white;
+        font-size: 20px;
+        transition: 1s;
+        /* transition-delay: 2s;
+        transition-duration: 3s; */
+        /* transition-timing-function: linear; */
+        transition-timing-function: ease-in;
+        transition-duration: 10s;
+    }
+    button:hover{
+        width: 600px;
+       
+    }
 </style>
 <body>
    <center>
@@ -91,7 +108,12 @@ background-color: black;
             And every time you walk out, the less I love you
             Baby, we don't stand a chance, it's sad, but it's true
             I'm way too good at goodbyes</p>
+            <input type="text">
     </div>
+   </center>
+
+   <center>
+    <button>ADD MORE</button>
    </center>
 </body>
 </html>
