--- a/transition.html
+++ b/transition.html
@@ -52,6 +52,11 @@ background-color: black;
         width: 600px;
        
     }
+    input:focus{
+        background-color: red;
+      border: 2px green;
+      color: olive;
+    }
 </style>
 <body>
    <center>
